Revision history for {{$dist->name}}

{{$NEXT}}

0.42      2016-05-06 16:31:01 -0400
  - Support for MSYS2

0.41      2016-04-09 16:03:07 -0400
  - For the return value undef can be passed in to mean 'void'.
  - Fixed installer bug where ABI probe would silently fail if /tmp
    was mounted noexec
  - Avoid unnecessary downgrade on when Perl is compiled to use longdouble

0.40      2015-08-29 08:45:19 -0400
  - Closure declerations ignore white space between () and ->

0.39      2015-08-24 03:23:10 -0400
  - Fixed spurious warning: auto loading of record class (via FFI::Platypus::Record)
    was ALWAYS warning, when it should have only been warning on load failure.

0.38      2015-08-13 17:13:07 -0400
  - closure method now comes with a more useful diagnostic thinks to
    Carp::croak
  - Added a check for standard C headers.  This seems to help the configure
    stage find ptrdiff_t, which was frequently not detected correctly
    (at least on Linux).
  - Improved thread safety by using MY_CXT for some very infrequently used
    global variables.
  - Added IRC meta data information for metacpan.org.  Please join us at
    #native on irc.perl.org!
  - Many minor documentation corrections and tweaks.  Most significant is
    that Convert::Binary::C can now be recommended as it is once again
    properly maintained.
  - Added tests for threads and forks.  If these tests fail in your environment
    please let me know!

0.37      2015-05-29 14:28:21 -0400
  - Added compatability back in for older version of constant
    (newer one is not available on CPAN yet)

0.36      2015-05-29 13:40:32 -0400
  - Explicitly require constant pragma version 1.32

0.35      2015-05-29 12:06:39 -0400
  - FFI::Platypus::Record uses constant to create size of alignment constants
    instead of creating them with a sub reference (this usage was deprecated
    in Perl 5.22)

0.34      2015-05-07 09:27:04 -0400