@@ -1,14 +1,15 @@
 use strict;
 use warnings;
-use FFI::Platypus::Declare qw( int string );
+use FFI::Platypus;
 
-lib undef;
-attach puts => [string] => int;
-attach strlen => [string] => int;
+my $ffi = FFI::Platypus->new;
+$ffi->lib(undef);
+$ffi->attach(puts => ['string'] => 'int');
+$ffi->attach(strlen => ['string'] => 'int');
 
 puts(strlen('somestring'));
 
-attach strstr => [string,string] => string;
+$ffi->attach(strstr => ['string','string'] => 'string');
 
 puts(strstr('somestring', 'string'));
 
@@ -16,6 +17,6 @@ puts(strstr('somestring', 'string'));
 
 puts(puts("lol"));
 
-attach strerror => [int] => string;
+$ffi->attach(strerror => ['int'] => 'string');
 
 puts(strerror(2));
