@@ -1,16 +1,16 @@
 use strict;
 use warnings;
 use FFI::CheckLib;
-use FFI::Platypus::Declare
-  'void',
-  [ 'string(37)' => 'uuid_string' ],
-  [ 'record(16)' => 'uuid_t' ];
+use FFI::Platypus;
 use FFI::Platypus::Memory qw( malloc free );
 
-lib find_lib_or_exit lib => 'uuid';
+my $ffi = FFI::Platypus->new;
+$ffi->lib(find_lib_or_exit lib => 'uuid');
+$ffi->type('string(37)' => 'uuid_string');
+$ffi->type('record(16)' => 'uuid_t');
 
-attach uuid_generate => [uuid_t] => void;
-attach uuid_unparse  => [uuid_t,uuid_string] => void;
+$ffi->attach(uuid_generate => ['uuid_t'] => 'void');
+$ffi->attach(uuid_unparse  => ['uuid_t','uuid_string'] => 'void');
 
 my $uuid = "\0" x 16;  # uuid_t
 uuid_generate($uuid);
